cmake_minimum_required(VERSION 3.20)
project(C___Solutions)

set(CMAKE_CXX_STANDARD 14)
add_executable(TribAndFibNumbers "Dynamic Programming/TribAndFibNumbers.cpp")
add_executable(main "Dynamic Programming/main.cpp")
add_executable(ClimbingStairs "Dynamic Programming/ClimbingStairs.cpp")
add_executable(MinimumCostClimbingStairs "Dynamic Programming/MinimumCostClimbingStairs.cpp")